<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffa5fdff">

    <TextView android:text="@string/title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_text_size_title_material"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:width="200dp"
        android:background="#ff8cff46"
        android:layout_marginBottom="10dp"
        android:onClick="displayAToast"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/football_scores_app"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:background="#ff8cff46"
        android:layout_marginBottom="10dp"
        android:onClick="displayAToast"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:background="#ff8cff46"
        android:layout_marginBottom="10dp"
        android:onClick="displayAToast"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:background="#ff8cff46"
        android:layout_marginBottom="10dp"
        android:onClick="displayAToast"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:background="#ff8cff46"
        android:layout_marginBottom="10dp"
        android:onClick="displayAToast"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:width="200dp"
        android:background="#ff8cff46"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:onClick="displayAToast"/>

</RelativeLayout>
